<resources>
    <string name="app_name">BOT-EAFIT</string>
    <string name="action_settings">Configuracion</string>

    <!-- Strings related to login -->
    <!-- Strings related to LoginActivity View -->
    <string name="hint_user">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_ingresar">INGRESAR</string>
    <string name="text_no_account">¿No tienes cuenta?,</string>
    <string name="text_create_account"><u>Crea una aquí</u></string>
    <string name="text_remember_account"><u>Olvide mi contraseña</u></string>
    <string name="logo_descrip">logo</string>
    <string name="error_invalid_email">Ingrese un email valido</string>
    <string name="error_invalid_password">Ingrese una contraseña valida</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Este campo es necesario</string>

    <!-- Strings related to RegistreActivity View-->
    <string name="toolbar_titulo">Registro de Usuarios</string>
    <string name="hint_username">Nombre Completo</string>
    <string name="hint_email">Email</string>
    <string name="button_register">REGISTRARSE</string>
    <string name="texthelp_register">Recuerda que debes registrarte con tu dirección de correo electrónico EAFIT (@eafit.edu.co), a esta
    dirección se enviaran los datos de acceso.</string>

    <!-- Activity Names and Descriptions -->
    <string name="desc_in_activity_splash">BIENVENIDO</string>
    <string name="string_prueba_card">Nombre1 Apellidos</string>

    <string name="text_update_account"><u>Editar Perfil</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition_name">transition1</string>
    <string name="title_activity_constraint">ConstraintActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity Names and Descriptions Watson-->
    <string name="what_s_on_your_mind">¿Como te puedo ayudar?</string>

    <!-- Activity user type, list spinner-->

    <string name="country_prompt">Seleccione un Rol</string>

    <string-array name="country_arrays">
        <item>ESTUDIANTE</item>
        <item>DOCENTE</item>
        <item>ADMINISTRATIVO</item>
        <item>CEC</item>
    </string-array>

    <string-array name="motivo_notificacion">
        <item>RESPUESTA INCORRECTA</item>
        <item>NO OBTUVE RESPUESTA</item>
        <item>INCOHERENCIA EN LA RESPUESTA</item>
    </string-array>

    <string-array name="chat_satisfaccion">
        <item>MUY SATISFACTORIA</item>
        <item>MEDIANAMENTE SATISFACTORIA</item>
        <item>NO SATISFACTORIA</item>
    </string-array>

    <string-array name="chat_motivo">
        <item>AMPLIAR CONOCIMIENTO</item>
        <item>MEJORAR LOGICA DE RESPUESTA</item>
        <item>CORREGIR RESPUESTAS</item>
    </string-array>

    <string-array name="chat_calificacion">
        <item>5 - Excelente</item>
        <item>4 - Buena</item>
        <item>3 - Regular</item>
        <item>2 - Mala</item>
        <item>1 - Muy Mala</item>
    </string-array>

    <string name="pref_ringtone_silent">Silencion</string>


    <string name="title_activity_card_view">CardView</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_settings">Configuraciones</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Permitir Notificaciones Push</string>
    <string name="pref_description_social_recommendations">Recibir mensajes de alertas, recomendaciones y uso.
    </string>

    <string name="pref_title_display_name">Nombre para mostrar</string>
    <string name="pref_default_display_name">AppEAFIT Bot</string>

    <string name="pref_title_add_friends_to_messages">Mostrar mi Ubicacion</string>
    <string-array name="pref_example_list_titles">
        <item>Siempre</item>
        <item>Cuando sea posible</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Datos y sincronización</string>

    <string name="pref_title_sync_frequency">Frecuencia</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>3 hora</item>
        <item>6 hora</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Configurar Sincronización</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Notificación Nuevo Mensaje</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silentt">Silencio</string>

    <string name="pref_title_vibrate">Vibrar</string>

</resources>
