<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- These settings headers are only used on tablets. -->


    <header
        android:fragment="com.universidadeafit.appeafit.Views.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_ima_help_asistente"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.universidadeafit.appeafit.Views.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_plus_add"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.universidadeafit.appeafit.Views.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_informacion_icon"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
