<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context="com.universidadeafit.appeafit.Views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/im_logo_eafit_1"
                android:layout_centerInParent="true"
                android:contentDescription="@string/logo_descrip"
                android:layout_centerHorizontal="true"
                 />
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin"
                tools:ignore="ScrollViewSize">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_user"
                        android:textSize="@dimen/text_size_label_login"
                        android:drawableRight="@drawable/ic_user_white"
                        android:inputType="textEmailAddress"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:textSize="@dimen/text_size_label_login"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_ingresar"
                    android:layout_marginTop="@dimen/top_marginbutton"
                    style="@style/RaisedButtonDark"
                    />

                <TextView
                    android:id="@+id/RememberAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_remember_account"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textSize="13dp"
                    android:layout_marginLeft="@dimen/text_margin"
                    tools:ignore="RtlHardcoded" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/NoAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_no_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_noaccount"/>
                    <TextView
                        android:id="@+id/CreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_create_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_noaccount"
                        android:layout_toRightOf="@+id/NoAccount"
                        android:layout_marginLeft="@dimen/text_margin"
                        tools:ignore="RtlHardcoded" />


                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
